Fix alignment on storage

--- a/code/ui/Storage.scss
+++ b/code/ui/Storage.scss
@@ -1,61 +1,66 @@
 ﻿Storage {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  pointer-events: none;
+  backdrop-filter-blur: 24px;
+  background-color: rgba(50 35 25 0.8);
+
+  .backpack,
+  .storage,
+  .hotbar {
+    padding: 32px;
+    width: 30%;
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
     flex-direction: column;
-    pointer-events: none;
-    backdrop-filter-blur: 24px;
-    background-color: rgba( 50 35 25 0.8 );
+    pointer-events: all;
 
-    .backpack, .storage, .hotbar {
-        padding: 32px;
-        width: 30%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        pointer-events: all;
-
-        .title {
-            margin-bottom: 24px;
-            font-family: Roboto;
-            font-size: 32px;
-            color: white;
-        }
-
-        .slots {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-
-            InventorySlot {
-                margin-right: 10px;
-                margin-top: 10px;
-            }
-
-            &:last-child {
-                margin-right: 0px;
-            }
-        }
+    .title {
+      margin-bottom: 24px;
+      font-family: Roboto;
+      font-size: 32px;
+      color: white;
     }
 
-    .backpack {
-        margin-right: 32px;
-    }
+    .slots {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      flex-shrink: 1;
+      max-width: 472px;
 
+      InventorySlot {
+        margin-left: 10px;
+        margin-top: 10px;
+      }
+
+      &:last-child {
+        margin-left: 0px;
+      }
+    }
+  }
+
+  .backpack {
+    margin-right: 32px;
+  }
+
+  .hotbar {
+    width: 100%;
+  }
+
+  &.hidden {
+    display: none;
+
+    .storage,
+    .backpack,
     .hotbar {
-        width: 100%;
+      pointer-events: none;
     }
-
-    &.hidden {
-        display: none;
-
-        .storage, .backpack, .hotbar {
-            pointer-events: none;
-        }
-    }
+  }
 }
